Fixed homepage spacing

--- a/src/assets/css/DefaultStyles.css
+++ b/src/assets/css/DefaultStyles.css
@@ -9,91 +9,81 @@ body {
 
 h1 {
   display: block;
-  font-size: 8rem;
-  margin-top: 0.67rem;
-  margin-bottom: 0.67rem;
-  margin-left: 0;
-  margin-right: 0;
+  font-size: 6rem;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
+  line-height: 4rem;
 }
 h2 {
   display: block;
   font-size: 3rem;
-  margin-top: 0.83rem;
-  margin-bottom: 0.83rem;
-  margin-left: 0;
-  margin-right: 0;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
+  line-height: 2rem;
 }
 h3 {
   display: block;
   font-size: 2.25rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  margin-left: 0;
-  margin-right: 0;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
+  line-height: 1.75rem;
 }
 h4 {
   display: block;
   font-size: 1.5rem;
-  margin-top: 1.33rem;
-  margin-bottom: 1.33rem;
-  margin-left: 0;
-  margin-right: 0;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
+  line-height: 1rem;
 }
 
 .d {
   border: 1px solid black;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   h1 {
-    display: block;
     font-size: 4rem;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
-    font-family: "Roboto", sans-serif;
   }
   h2 {
-    display: block;
     font-size: 3rem;
-    margin-top: 0.83rem;
-    margin-bottom: 0.83rem;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
-    font-family: "Roboto", sans-serif;
   }
   h3 {
-    display: block;
     font-size: 2rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
-    font-family: "Roboto", sans-serif;
   }
   h4 {
-    display: block;
     font-size: 1.5rem;
-    margin-top: 1.33rem;
-    margin-bottom: 1.33rem;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
-    font-family: "Roboto", sans-serif;
   }
 }
+
+@media (max-width: 480px) and (orientation: portrait) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1.25rem;
+  }
+}
+
+/* @media (max-height: 480px) and (orientation: landscape) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1.25rem;
+  }
+  h4 {
+    font-size: 1.15nrem;
+  }
+} */
 
 .primary {
   color: #f7f7f7;
